--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "exports": {
-    ".": {
+    "./index": {
       "import": {
         "types": "./dist/index.d.mts",
         "default": "./dist/index.mjs"
@@ -12,16 +12,6 @@
       "require": {
         "types": "./dist/index.d.cts",
         "default": "./dist/index.cjs"
-      }
-    },
-    "./utils": {
-      "import": {
-        "types": "./dist/utils.d.mts",
-        "default": "./dist/utils.mjs"
-      },
-      "require": {
-        "types": "./dist/utils.d.cts",
-        "default": "./dist/utils.cjs"
       }
     }
   },
@@ -47,7 +37,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/node": "^22.15.19",
+    "@vitest/browser": "^3.1.4",
+    "playwright": "^1.52.0",
     "unbuild": "^3.5.0",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.4"
   }
 }
