--- a/package.json
+++ b/package.json
@@ -57,11 +57,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@edge-runtime/vm": "^5.0.0",
     "@types/node": "^22.15.19",
     "@vitest/browser": "^3.1.4",
     "jest-image-snapshot": "^6.5.1",
     "playwright": "^1.52.0",
     "unbuild": "^3.5.0",
     "vitest": "^3.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lucasthevenet/pixly.git"
   }
 }
