--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@edge-runtime/vm": "^5.0.0",
 		"@types/node": "^22.15.19",
 		"@vitest/browser": "^3.1.4",
+		"@vitest/ui": "3.1.4",
 		"playwright": "^1.52.0",
 		"turbo": "^2.5.3",
 		"unbuild": "^3.5.0",
