--- a/package.json
+++ b/package.json
@@ -2,44 +2,20 @@
 	"name": "pixly",
 	"version": "0.1.1",
 	"type": "module",
-	"exports": {
-		".": {
-			"import": {
-				"types": "./dist/index.d.mts",
-				"default": "./dist/index.mjs"
-			},
-			"require": {
-				"types": "./dist/index.d.cts",
-				"default": "./dist/index.cjs"
-			}
-		},
-		"./factory": {
-			"import": {
-				"types": "./dist/factory.d.mts",
-				"default": "./dist/factory.mjs"
-			},
-			"require": {
-				"types": "./dist/factory.d.cts",
-				"default": "./dist/factory.cjs"
-			}
-		},
-		"./pipeline": {
-			"import": {
-				"types": "./dist/pipeline.d.mts",
-				"default": "./dist/pipeline.mjs"
-			},
-			"require": {
-				"types": "./dist/pipeline.d.cts",
-				"default": "./dist/pipeline.cjs"
-			}
-		}
-	},
+	"sideEffects": ["src/utils/polyfill.ts", "dist/utils/polyfill.js"],
 	"files": ["dist"],
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": "./dist/index.js",
+		"./package.json": "./package.json"
+	},
 	"scripts": {
-		"build": "unbuild",
+		"build": "tsdown",
 		"check": "biome check",
 		"check:fix": "biome check --write",
-		"prepack": "unbuild",
+		"prepack": "tsdown",
 		"test": "vitest",
 		"typecheck": "tsc --noEmit",
 		"release": "bun run build && changeset publish",
@@ -61,9 +37,9 @@
 		"@edge-runtime/vm": "^5.0.0",
 		"@types/node": "^22.15.19",
 		"@vitest/browser": "^3.1.4",
+		"@vitest/ui": "3.1.4",
 		"playwright": "^1.52.0",
-		"turbo": "^2.5.3",
-		"unbuild": "^3.5.0",
+		"tsdown": "^0.12.3",
 		"vitest": "^3.1.4"
 	},
 	"repository": {
